--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 		    Use 'a' and 'd' to tilt your ship.
 		    Use 'w' to accelerate.
 		    Press 'f' for hyperspace!
+		    Careful- dont let the asteroids hit your ship! 
+		    Press space to shoot the asteroids with your bullets.
 	    </footer>
 	</body>
 </html>
